auto-test/tests/chapter_15/invalid_types/extra_credit/compound_add_double_to_pointer.c

int main(void) {
    int arr[3] = {1, 2, 3};
    int *elem = arr;
    elem += 1.0;
    return 0;
}